--- a/src/components/pages/User.css
+++ b/src/components/pages/User.css
@@ -29,6 +29,8 @@
     border-radius: 5px 5px 0 0;
     margin:30px 30px 5px 30px;
     height: 50px;
+    vertical-align: middle;
+    padding: 10px;
 }
 
 .email-label{
@@ -36,6 +38,8 @@
     margin:5px 30px 5px 30px;
     border-radius:  0 0 5px 5px;
     height: 50px;
+    vertical-align: middle;
+    padding: 10px;
 }
 
 .profile-card button {
