not sure about online/offline feature

--- a/src/components/pages/Room.css
+++ b/src/components/pages/Room.css
@@ -1,69 +1,145 @@
-.card {
-    top:1vh;
-    left:1vw;
-    width: 98vw;
-    height: 98vh;
-    border-radius: 30px;
-    background: #e0e0e0;
-    box-shadow: 15px 15px 30px #bebebe,
-                -15px -15px 30px #ffffff;
-   }
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 
-.text-center{
-    position: relative;
-    top: 5vh;
-}
-.message-sender{
-    position: absolute;
-    bottom: 2vh;
-    /* right: 0; */
-    align-self: center;
+.chat-window {
+  /* width: 90vw; */
+  height: 100% !important;
+  padding-top: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
+
 }
 
-.message-sender input {
-    width: 50vw;
-    height: 60px;
+.chat-window p {
+  margin: 0;
+}
+.chat-window .chat-header {
+  height: 45px;
+  border-radius: 6px;
+  background: #263238;
+  position: relative;
+  cursor: pointer;
+}
+.chat-window .chat-header p {
+  display: block;
+  padding: 0 1em 0 2em;
+  color: #fff;
+  font-weight: 700;
+  line-height: 45px;
 }
 
-.message-sender button{
-    margin: 1em;
-    height: 60px;
-    border-radius: 5px;
-    padding: 5px;
+.chat-window .chat-body {
+  height: calc(650px - (45px + 70px));
+  border: 1px solid #263238;
+  background: #fff;
+
+  position: relative;
 }
-.body{
-    /* position: absolute; */
-    /* top: 15vh; */
-    margin-top: 4vh;
-    align-self: center;
-    height: 72vh;
-    overflow: scroll;
-    overflow-x: hidden;
-}
-.msg{
-    height: 50px;
-    width: 80vw;
-    margin: 5px;
+.chat-window .chat-body .message-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.msg h2{
-    border: 1px solid black;
-    border-radius: 5px 0 0 5px;
-    height: 50px;
-    padding: 10px;
-    vertical-align: middle;
+.chat-window .chat-body .message-container::-webkit-scrollbar {
+  display: none;
 }
-.msg h4{
-    background-color: white;
-    width: 80%;
-    padding: 10px;
-    margin: 0 5px 0 5px;
-    overflow: auto;
+.chat-window .chat-body .message {
+  height: auto;
+  padding: 10px;
+  display: flex;
 }
 
-.msg h6{
-    border:1px solid black;
-    border-radius: 0 5px 5px 0;
-    height: 50px;
-    padding: 10px;
+.chat-window .chat-body .message .message-content {
+  width: auto;
+  height: auto;
+  min-height: 40px;
+  max-width: 400px;
+  background-color: #43a047;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+#you {
+  justify-content: flex-start;
+}
+
+#you .message-content {
+  justify-content: flex-start;
+}
+
+#you .message-meta {
+  justify-content: flex-start;
+  margin-left: 5px;
+}
+
+#other {
+  justify-content: flex-end;
+}
+
+#other .message-content {
+  justify-content: flex-end;
+  background-color: cornflowerblue;
+}
+
+#other .message-meta {
+  justify-content: flex-end;
+  margin-right: 5px;
+}
+
+.message-meta #author {
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.chat-window .chat-body .message .message-meta {
+  display: flex;
+  font-size: 12px;
+}
+
+.chat-window .chat-footer {
+  height: 40px;
+  border: 1px solid #263238;
+  border-top: none;
+  display: flex;
+}
+
+.chat-window .chat-footer input {
+  height: 100%;
+  flex: 85%;
+  border: 0;
+  padding: 0 0.7em;
+  font-size: 1em;
+  border-right: 1px dotted #607d8b;
+
+  outline: none;
+  font-family: "Open Sans", sans-serif;
+}
+
+.chat-window .chat-footer button {
+  border: 0;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  flex: 15%;
+  height: 100%;
+  background: transparent;
+  outline: none;
+  font-size: 25px;
+  color: lightgray;
+}
+
+.chat-window .chat-footer button:hover {
+  color: #43a047;
+}
+.hide {
+  opacity: 0 !important;
 }
