--- a/src/components/pages/User.css
+++ b/src/components/pages/User.css
@@ -1,7 +1,7 @@
 .card{
     top:1vh;
     left:1vw;
-    width: 98vw;
+    /* width: 98vw; */
     height: 98vh;
     border-radius: 30px;
     background: #e0e0e0;
