--- a/src/components/pages/HomePage.css
+++ b/src/components/pages/HomePage.css
@@ -9,8 +9,8 @@
 
 .search-div{
     position: absolute;
-    top: 18vh;
-    right: 12vw;
+    top: 28vh;
+    right: 4vw;
     box-shadow: 4px 4px 8px #bebebe,
                 -4px -4px 8px #ffffff;
     background-color: #a7fff89e;
@@ -20,8 +20,9 @@
     /* border-radius: 25px; */
   /* border: 2px solid #73AD21; */
   padding: 20px;
-  width: 200px;
+  width: 150px;
   height: 1em; 
+  font-size: 12px;
 }
 
 .search-div img {
@@ -51,7 +52,7 @@
 .request-btn-div{
   position: absolute;
   top: 18vh;
-  left: 4vw;
+  right: 4vw;
   border-radius: 1px;
   border: 1px solid black;
   background-color: white;
@@ -140,7 +141,7 @@
     overflow-y: auto !important;
     /* margin-top: 5px; */
     margin-left: 50px;
-    margin-right: 140px;
+    margin-right: 50px;
    }
 /*  */
 
@@ -175,14 +176,14 @@
     height: 100%;
     background: #a7fff89e;
     list-style-type: none;
-    margin-left: 220px;
+    margin-left: 20px;
     box-shadow: 5px 5px 10px #bebebe,
                 -5px -5px 10px #ffffff;
                 padding: 10px;
   }
   
   .friend {
-    width: 200px;
+    width: 400px;
     height: 60px;
     /* background: #EEE;
     border-bottom: 1px solid #DDD; */
@@ -190,10 +191,22 @@
     display: flex;
     align-items: center;
     margin: 20px;
-    padding: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   
-  .friend img {
+  .friend-img {
+    width: 45px;
+    height: 45px;
+    border-radius: 30px;
+    border: 2px solid #AAA;
+    object-fit: cover;
+    margin-left: 5px;
+    margin-right: 10px;
+  }
+
+  .channel-img {
     width: 45px;
     height: 45px;
     border-radius: 30px;
@@ -205,10 +218,16 @@
   
   .friend .name {
     font-size: 20px;
-    margin: 80px;
-
+    margin-left: 80px;
+    margin-right: 20px;
+    display: inline;
   }
 
+  .friend .name .bio {
+    font-size: 15px;
+    margin: 20px;
+    /* display: inline; */
+  }
   /* .friend:hover{
       background-color: #bebebe;
   } */
